# putty-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  putty_mcp.py  pyproject.toml  requirements.txt
putty_lib/: __init__.py  window_reader.py  window_send.py
